# medicine

./: Cargo.toml  README.md
migrations/: 20240419000001_create_medicines_table.sql
src/: main.rs
