[package]
name = "medicine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
home = "0.5.11"
jiff = "0.2.9"
jiff-sqlx = { version = "0.1.1", features = ["sqlite"] }

sqlx = { version = "0.8",  features = ["runtime-tokio", "sqlite" ]}
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
