[package]
name = "medicine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
comfy-table = "7.1.4"
home = "0.5.11"
jiff = "0.2.9"
jiff-sqlx = { version = "0.1.1", features = ["sqlite"] }

sqlx = { version = "0.8",  features = ["runtime-tokio", "sqlite" ]}
table = "0.4.0"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
